# Elektronik_ukolovnik

./: CMakeLists.txt
Elektronik_ukolovnik/: CMakeLists.txt  Elektronik_ukolovnik.cpp  Elektronik_ukolovnik.h
